Added loading animation

--- a/src/kirubaiye-app/kirubaiye-app.html
+++ b/src/kirubaiye-app/kirubaiye-app.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="./app-header.html">
+<link rel="import" href="../load-screen/load-screen.html">
 
 <dom-module id="kirubaiye-app">
   <template>
@@ -8,6 +9,7 @@
         display: block;
       }
     </style>
+    <load-screen></load-screen>
     <app-header></app-header>
     <h2>Hello [[prop1]]!</h2>
   </template>
