--- a/src/kirubaiye-app/kirubaiye-app.html
+++ b/src/kirubaiye-app/kirubaiye-app.html
@@ -2,8 +2,10 @@
 <link rel="import" href="../../bower_components/app-route/app-route.html">
 <link rel="import" href="../../bower_components/app-route/app-location.html">
 <link rel="import" href="../../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="../../bower_components/polymerfire/firebase-app.html">
 <link rel="import" href="../podcast/podcast-all.html">
 <link rel="import" href="../podcast/podcast-view.html">
+<link rel="import" href="../podcast/podcast-new.html">
 
 <dom-module id="kirubaiye-app">
   <template>
@@ -16,8 +18,13 @@
         text-align: center;
       }
     </style>
-    <h2 class="heading">Kirubaiye</h2>
-
+    <firebase-app
+      auth-domain="kir-1-ec69d.firebaseapp.com"
+      database-url="https://kir-1-ec69d.firebaseio.com"
+      api-key="AIzaSyC72cZxzkj9dYB4jNjH8hfe9YLKjJ5Qr44"
+      storage-bucket="kir-1-ec69d.appspot.com"
+      messaging-sender-id="317445059045">
+    </firebase-app>
     <app-location route="{{route}}"></app-location>
     <app-route
       route="{{route}}"
@@ -25,9 +32,11 @@
       data="{{routeData}}"
       tail="{{subroute}}"></app-route>
 
+    <h2 class="heading">Kirubaiye</h2>
     <iron-pages selected="[[routeData.view]]" attr-for-selected="name" fallback-selection="all">
       <podcast-all name="all"></podcast-all>
       <podcast-view name="view"></podcast-view>
+      <podcast-new name="new"></podcast-new>
     </iron-pages>
 
   </template>
