--- a/src/podcast/podcast-new.html
+++ b/src/podcast/podcast-new.html
@@ -3,7 +3,9 @@
 <link rel="import" href="../../bower_components/iron-input/iron-input.html">
 <link rel="import" href="../../bower_components/iron-form/iron-form.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../../bower_components/vaadin-upload/vaadin-upload.html">
+
 
 <dom-module id="podcast-new">
   <template>
@@ -37,11 +39,11 @@
     <div class="form">
       <paper-input value="{{title}}" label="Title"></paper-input>
       <paper-input id="file" type="file" label="Message File"></paper-input>
-      <paper-input type="date" value="{{date}}" label="Date" placeholder="DD/MM/YYYY"></paper-input>
-      <div class="podcast-image"></div>
+      <p class="center">[[progress]]</p>
+      <paper-input type="date" value="{{date}}" label="Date"></paper-input>
       <paper-button on-click="_createNewPodcast" raised class="black">create new podcast</paper-button>
     </div>
-
+    <paper-toast id="toast" text="[[messageToUser]]"></paper-toast>
 
         <!-- TODO: add drag and drop -->
         <!-- <vaadin-upload id="message">
@@ -56,6 +58,7 @@
      * @customElement
      * @polymer
      */
+
     class PodcastNew extends Polymer.Element {
       static get is() { return 'podcast-new'; }
       static get properties() {
@@ -73,11 +76,42 @@
           file: {
             type: File
           },
+          messageToUser: {
+            type: String,
+            notify: true
+          },
+          progress: {
+            type: String,
+            notify: true
+          }
         };
       }
       _createNewPodcast() {
-        console.log('hi!')
-        console.log(this.title, this.$.file, this.date)
+        let { title, date } = this
+        let file = this.$.file.inputElement.inputElement.files[0]
+        let ref = firebase.storage().ref().child(`messages/${file.name}`)
+        let uploadTask = ref.put(file)
+        let imgUrl
+        fetch('https://source.unsplash.com/category/nature/all/1000x1200?nature').then((res) => {
+           imgUrl = res.url
+        })
+        uploadTask.on('state_changed', (snapshot) => {
+          let progressCount = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+          this.progress = `${progressCount}% uploaded`
+        }, (err) => console.log(err), () => {
+          uploadTask.snapshot.ref.getDownloadURL().then(downloadURL => {
+            let url = downloadURL
+            let newPodcast = {
+              title,
+              date,
+              url,
+              imgUrl
+            }
+            firebase.database().ref('podcasts/').push(newPodcast)
+            this.messageToUser = 'New podcast has successfully been added'
+            this.$.toast.open()
+          })
+        })
       }
     }
 
