view podcast not working yet :(

--- a/src/kirubaiye-app/kirubaiye-app.html
+++ b/src/kirubaiye-app/kirubaiye-app.html
@@ -32,10 +32,11 @@
       data="{{routeData}}"
       tail="{{subroute}}"></app-route>
 
+
     <h2 class="heading">Kirubaiye</h2>
     <iron-pages selected="[[routeData.view]]" attr-for-selected="name" fallback-selection="all">
       <podcast-all name="all"></podcast-all>
-      <podcast-view name="view"></podcast-view>
+      <podcast-view name="p"></podcast-view>
       <podcast-new name="new"></podcast-new>
     </iron-pages>
 
