--- a/src/podcast/podcast-all.html
+++ b/src/podcast/podcast-all.html
@@ -35,6 +35,7 @@
         image-url="[[podcast.imgUrl]]"
         date="[[podcast.date]]"
         url="[[podcast.url]]"
+        access-url="[[podcast.accessUrl]]"
         ></podcast-card>
       </template>
     </div>
