--- a/src/podcast/podcast-card.html
+++ b/src/podcast/podcast-card.html
@@ -27,6 +27,7 @@
         perspective: none;
         backface-visibility: hidden;
         transform: translateZ(0);
+        margin: 20px 0;
       }
 
       .title {
@@ -48,9 +49,9 @@
       }
     </style>
     <div class="podcast">
-      <a class="podcast-link" href="#">
+      <a class="podcast-link" href="/{{accessUrl}}">
         <div class="image" style="background-image: url({{imageUrl}});"></div>
-        <h3 class="title">{{title}} (PS SATISH C)</h3>
+        <h3 class="title">{{title}}</h3>
         <p class="date">{{date}}</p>
       </a>
     </div>
@@ -75,6 +76,9 @@
             type: String
           },
           url: {
+            type: String
+          },
+          accessUrl: {
             type: String
           }
         };
