podcast view works!

--- a/src/podcast/podcast-all.html
+++ b/src/podcast/podcast-all.html
@@ -36,6 +36,7 @@
         date="[[podcast.date]]"
         url="[[podcast.url]]"
         access-url="[[podcast.accessUrl]]"
+        uid="[[podcast.$key]]"
         ></podcast-card>
       </template>
     </div>
