--- a/src/podcast/podcast-card.html
+++ b/src/podcast/podcast-card.html
@@ -49,7 +49,7 @@
       }
     </style>
     <div class="podcast">
-      <a class="podcast-link" href="/{{accessUrl}}">
+      <a class="podcast-link" href="/p/{{accessUrl}}">
         <div class="image" style="background-image: url({{imageUrl}});"></div>
         <h3 class="title">{{title}}</h3>
         <p class="date">{{date}}</p>
